--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.10"
 dependencies = [
     "dotenv>=0.9.9",
     "faiss-cpu>=1.13.1",
+    "gradio>=6.1.0",
     "langchain>=1.2.0",
     "langchain-community>=0.4.1",
     "langchain-google-genai>=4.0.0",
     "langchain-openai>=1.1.3",
     "notebook>=7.5.0",
+    "ollama>=0.6.1",
 ]
